syntax = "proto3";

option csharp_namespace = "RafRaft.Protos";

package RafRaft;

service RafNode{
    rpc Heartbeat(AppendEntriesRequest) returns (AppendEntriesReply);
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesReply);
    rpc RequestVote(VoteRequest) returns (VoteReply);
}

message AppendEntriesRequest{
    int32 term = 1;
    int32 leaderId = 2;
    int32 prevLogId = 3;
    int32 prevLogTerm = 4;
    repeated bytes entries = 5;
    int32 leaderCommitId = 6;
}

message AppendEntriesReply{
    int32 termId = 1;
    bool success = 2;
}

message VoteRequest{
    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogId = 3;
    int32 lastLogTerm = 4;
}

message VoteReply{
    int32 term = 1;
    bool voteGranted = 2;
}